<resources>
    <string name="app_name">Godinez</string>
    <string name="title_activity_navegacion">Godinez Lunch</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!--Filtro-->
    <string name="filtro_header">Filtro</string>
    <string name="filtro_description">Configura ciertos parametros para econtrar un lugar para comer</string>
    <string name="radio">Radio de búsqueda en metros</string>
    <string name="calificacion">Calificación de fondas</string>
    <string name="guardar">Guardar</string>

    <!--Navegacion menu-->
    <string name="inicio">Inicio</string>
    <string name="mostrar_lugares">Lugares</string>
    <string name="favoritos">Favoritos</string>
    <string name="acerca">Acerca</string>

    <!--Dialogo no gps-->
    <string name="titulo_gps">¿Te gustaria encenderlo?</string>
    <string name="mensaje_gps">"El gps no esta encendido, debes de encenderlo para que funciones esta app</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>


    <!--Detalle-->
    <string name="filtrar">Filtar</string>
    <string name="ranting">Ranking</string>
    <string name="telefono">Teléfono</string>
    <string name="direccion">Dirección</string>
    <string name="horario">Horario</string>


    <!--Tabs-->
    <string name="tab_detalle">Información</string>
    <string name="tab_menu">Menu</string>
    <string name="tab_comentarios">Comentarios</string>

    <!--Keys-->
    <string name="json_key">json</string>

    <string name="title_activity_maps">Mapa</string>
    <string name="title_activity_detalle">Detalle</string>
    <string name="title_activity_filtro">Filtro Busqueda</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>
