<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_menu_inicio"
            android:title="@string/inicio"/>
        <item
            android:id="@+id/nav_lugares"
            android:icon="@drawable/ic_menu_lugares"
            android:title="@string/mostrar_lugares" />
        <item
            android:id="@+id/nav_favorito"
            android:icon="@drawable/ic_menu_favorito"
            android:title="@string/favoritos" />
        <item
            android:id="@+id/nav_acerca"
            android:icon="@drawable/ic_menu_acerca"
            android:title="@string/acerca" />

    </group>
<!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
