<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_filtro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.oscarito.godinez.Views.Filtro">


        <ImageView
            android:id="@+id/imageLogoFiltro"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/tvFiltro"
            android:layout_toRightOf="@+id/imageLogoFiltro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filtro_header"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <TextView
            android:id="@+id/tvFiltroDetalle"
            android:layout_toRightOf="@+id/imageLogoFiltro"
            android:layout_below="@+id/tvFiltro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filtro_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="15dp"
        android:layout_below="@+id/tvFiltroDetalle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView android:text="@string/radio" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textAppearance="?android:textAppearanceMedium" />


        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@android:color/transparent"/>


           <EditText
               android:id="@+id/txtRadio"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" android:hint="Metros" android:inputType="number"
               style="@style/Widget.AppCompat.EditText" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@android:color/transparent"/>

        <TextView android:text="@string/calificacion" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textAppearance="?android:textAppearanceMedium" />


        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@android:color/transparent"/>

        <RatingBar
            android:id="@+id/ratingSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stepSize="1"
            android:numStars="5"
            android:rating="3.5"
            style="@style/Widget.AppCompat.RatingBar" />

        <TextView android:text="@string/categoria" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textAppearance="?android:textAppearanceMedium" />




        <Spinner
            android:id="@+id/spinnerCategorias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>


        <Button
                android:id="@+id/btnGuardar"
              android:layout_marginTop="20dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/guardar"/>


    </LinearLayout>


</RelativeLayout>
